Fix sticky hover effects on mobile devices

--- a/docs/static/content.css
+++ b/docs/static/content.css
@@ -162,6 +162,13 @@ color:#d06d3c;
 cursor:pointer
 }
 
+@media (hover: none) {
+  #head li:hover {
+  background: inherit;
+  color: inherit;
+  }
+}
+
 #head .selected {
 background:#fff;
 color:#3F627F
@@ -639,6 +646,12 @@ right:27px;
 
 #right .back-to-top:hover {
 opacity:1.0
+}
+
+@media (hover: none) {
+  #right .back-to-top:hover {
+  opacity: 0.5;
+  }
 }
 
 #right .back-to-top:before {
